--- a/app/src/main/res/drawable/ic_desert.xml
+++ b/app/src/main/res/drawable/ic_desert.xml
@@ -1,8 +1,8 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportHeight="512"
-    android:viewportWidth="512">
+    android:viewportWidth="512"
+    android:viewportHeight="512">
     <path
         android:fillColor="#10BB67"
         android:pathData="M437,360h-30c-24.814,0 -45,-20.186 -45,-45v-30c0,-8.291 6.709,-15 15,-15s15,6.709 15,15v30c0,8.276 6.724,15 15,15h30c8.291,0 15,6.709 15,15S445.291,360 437,360z" />
